# consumer_metamodel

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: adoption.rs  basic_usage.rs  simulation.rs
src/: agent.rs  environment.rs  factory.rs  information.rs  lib.rs  model.rs  types.rs  utils.rs
